Added new BookStore WebApp

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs
+/myBookStore/.vs/myBookStore/v16
+/myBookStore/myBookStore/obj
